1.0.2:
	- Escape ampersands in bibtex export
	- Options for setting gnome proxy in Preferences
	- Fix thumbnail sizing bug
	- Special case for getting dois like "doi: blah/blah, more text" to 
		ignore trailing comma.
	- Add progress dialog when loading library
	- Improved keyboard behaviour in main window and in document properties
	- Fix 'remove' failing with duplicate keys
	- Add "Delete File from Drive"
	- Add "Rename File to Key"
	- Add/fix some accelerators
	- Fix ./configure failing on Ubuntu 6.06
	- Add option to enclose all values in {} when exporting bibtex
	- Fix crash opening files which no longer exist (Andreas Dalsgaard)
	- Fix saving broken to FS away from $HOME (Andreas Dalsgaard)

1.0.1:
	- Save and load relative filenames as well as absolute filenames
	- When opening library, clear bibdata in between docs (Rodrigo Kassick)
	- Make SaveLibrary insensitive when library not dirty
	- Switch to autotools (Eric Lesh)
	- Open properties on double click as last resort
	- Import stuff:
		- Fix getting type wrong for PhdThesis
		- Fix bibtex import getting confused about certain accents (Chris Putnam)
		- Fix import dialog ignoring choice of file format
		- Fix chapter fields in incollection items in bibtex import
		- Understand translator fields in import
		- Don't extra fields for import fields with no value string
		- Import from MODS
		- Hide non-functional "auto-detect" option in import dialog

1.0.0: Initial release