@@ -1,4 +1,6 @@
 1.0.2:
+	- Handle "Digital Object Identifier 10.1109..." (Jordy Potman)
+	- Handle CDATA enclosure of titles (Jordy Potman)
 	- Escape ampersands in bibtex export
 	- Options for setting gnome proxy in Preferences
 	- Fix thumbnail sizing bug
